<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clavicusoft.wumpus.FirstIterationTests.MainActivity"
    android:background="@drawable/start_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/arrowimage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/wumpus_icon"
            app:srcCompat="@drawable/wumpus_icon"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            />

        <Button
            android:id="@+id/Individual"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/black_button"
            android:onClick="singlePlayer"
            android:text="Individual" />

        <Button
            android:id="@+id/buttonMultijuador"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/black_button"
            android:layout_gravity="center"
            android:onClick="multiPlayer"
            android:text="Multijugador" />


    </LinearLayout>

</LinearLayout>
