<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text_view_item"
    android:textColor="@color/white"
    android:textSize="17sp"
    android:padding="5sp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/capsule_medium"/>