<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clavicusoft.wumpus.Select.SelectFromLibActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/lblChooseLib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Seleccione un laberinto"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/dark"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewMazes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:textColor="#ffffff"
        android:divider="@color/beige"
        android:dividerHeight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
     </ListView>

</LinearLayout>