...
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btLabs"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/capsule_darkest"
            android:text="Enviar Laberintos"
...
