...

        <Button
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Emplazar"
            android:id="@+id/bcontinuar"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/capsule_darkest"/>
...
